CONFIG_LIBC_STREAM default to defined

--- a/libc/libc.config
+++ b/libc/libc.config
@@ -12,6 +12,7 @@ depend CONFIG_MUTEK_SCHEDULER
 %config CONFIG_LIBC_STREAM
 desc enable C library file streaming functions (fopen, fclose, ...)
 require CONFIG_LIBC_STREAM_BUFFER_SIZE
+default defined
 %config end
 
 %config CONFIG_LIBC_STREAM_BUFFER_SIZE
