--- a/hexo/hexo.config
+++ b/hexo/hexo.config
@@ -91,6 +91,7 @@ single CONFIG_HEXO_CPU_MMU CONFIG_HEXO_ARCH_MMU
 
 %config CONFIG_HEXO_MMU_PAGESIZE
 desc Virtual memory physical page size
+parent CONFIG_HEXO_MMU
 %config end
 
 %config CONFIG_HEXO_MMU_USER_START
@@ -108,11 +109,13 @@ default 0xc0000000
 %config CONFIG_HEXO_MMU_INITIAL_START
 desc Size of initial memory reserved for kernel use
 default 0x00000000
+parent CONFIG_HEXO_MMU
 %config end
 
 %config CONFIG_HEXO_MMU_INITIAL_END
 desc Size of initial memory reserved for kernel use
 default 0x00800000
+parent CONFIG_HEXO_MMU
 %config end
 
 %config CONFIG_HEXO_INTTYPES_DEPRECATED
