Implement M profile for ARM

--- a/cpu/arm/Makefile
+++ b/cpu/arm/Makefile
@@ -1,8 +1,13 @@
 
 objs = 											\
-boot.o											\
 cpu_init.o										\
 cpu_context.o
+
+ifeq ($(CONFIG_CPU_ARM_M_PROFILE),defined)
+objs += boot_m.o
+else
+objs += boot.o
+endif
 
 copy = ldscript
 
