--- a/cpu/arm/arm.config
+++ b/cpu/arm/arm.config
@@ -2,11 +2,76 @@
 %config CONFIG_CPU_ARM
 desc ARM processors support
 default undefined
-require	CONFIG_ARCH_SOCLIB
-provide CONFIG_CPU_CACHE
+require CONFIG_CPU_ARM_FPU
 provide CONFIG_CPU_NAME=arm
 provide CONFIG_MODULES=+cpu:%CONFIGPATH
-provide CONFIG_CPU_RESET_ADDR=0x00000000
 provide CONFIG_CPU_ENDIAN_LITTLE
 provide CONFIG_COMPILE_SIZEOF_INT=4
+single	CONFIG_CPU_ARM_SOCLIB CONFIG_CPU_ARM_7TDMI
+%config end
+
+%config CONFIG_CPU_ARM_ARCH
+desc ARM architecture name, like -march=
+parent CONFIG_CPU_ARM
+require CONFIG_CPU_ARM
+%config end
+
+%config CONFIG_CPU_ARM_CPU
+desc ARM cpu name, like -mcpu=
+parent CONFIG_CPU_ARM
+require CONFIG_CPU_ARM
+%config end
+
+%config CONFIG_CPU_ARM_FPU
+desc ARM fpu flavor
+parent CONFIG_CPU_ARM
+require CONFIG_CPU_ARM
+default soft
+%config end
+
+%config CONFIG_CPU_ARM_SOCLIB
+desc SoCLib ARM-v6
+parent CONFIG_CPU_ARM
+require CONFIG_CPU_ARM
+require	CONFIG_ARCH_SOCLIB
+provide CONFIG_CPU_CACHE
+provide CONFIG_DRIVER_ICU_ARM
+provide CONFIG_CPU_ARM_TLS_IN_C15
+provide CONFIG_CPU_ARM_ARCH=armv6k
+provide CONFIG_CPU_RESET_ADDR=0x00000000
+provide CONFIG_CPU_ARM_FPU=soft
+%config end
+
+# This is not supported for now...
+
+# %config CONFIG_CPU_ARM_T_PROFILE
+# desc Support ARM-Thumb when compiling
+# default undefined
+# parent CONFIG_CPU_ARM
+# require CONFIG_CPU_ARM
+# %config end
+
+%config CONFIG_CPU_ARM_TLS_IN_C15
+desc Implement TLS with dedicated register in c0
+default undefined
+parent CONFIG_CPU_ARM
+%config end
+
+%config CONFIG_CPU_ARM_M_PROFILE
+desc Microcontroller profile (ARM-7M)
+parent CONFIG_CPU_ARM
+require CONFIG_CPU_ARM
+exclude CONFIG_SMP
+provide CONFIG_ARCH_SIMPLE_COPY_DATA
+%config end
+
+%config CONFIG_CPU_ARM_7TDMI
+desc Arm7-TDMI
+parent CONFIG_CPU_ARM
+provide CONFIG_CPU_ARM
+provide CONFIG_CPU_ARM_CPU=arm7tdmi
+provide CONFIG_CPU_ARM_M_PROFILE
+# provide CONFIG_CPU_ARM_T_PROFILE
+provide CONFIG_CPU_ARM_FPU=soft
+provide CONFIG_CPU_RESET_ADDR=0x00000000
 %config end
