--- a/cpu/cpu.config
+++ b/cpu/cpu.config
@@ -17,12 +17,13 @@ default undefined
 
 %config CONFIG_CPU_CACHE_LINE
 desc Size of a single cpu cache line in bytes
+parent CONFIG_CPU_CACHE
 default 4
-flags mandatory
 %config end
 
 %config CONFIG_CPU_CACHE_COHERENCY
 desc Processors supports cache coherency mechanism
+parent CONFIG_CPU_CACHE
 require CONFIG_CPU_CACHE
 default undefined
 %config end
