--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -30,9 +30,11 @@ provide CONFIG_VMEM_KERNEL_ALLOC
 
 %config CONFIG_VMEM_PHYS_ALLOC
 desc Provide physical page allocator for virtual memory
+parent CONFIG_VMEM
 %config end
 
 %config CONFIG_VMEM_KERNEL_ALLOC
+parent CONFIG_VMEM
 require CONFIG_HEXO_MMU
 require CONFIG_VMEM_PHYS_ALLOC
 desc Provide kernel virtual address space allocator
