Split up mutek_main()

--- a/arch/ibmpc/Makefile
+++ b/arch/ibmpc/Makefile
@@ -1,7 +1,8 @@
 
 objs =											\
 arch_init.o										\
-mem_alloc.o
+mem_alloc.o \
+hw_init.o
 
 ifeq ($(CONFIG_ARCH_IBMPC_DMA), defined)
 objs += dma-8237.o
