--- a/arch/simple/Makefile
+++ b/arch/simple/Makefile
@@ -1,10 +1,14 @@
 
 objs =											\
 arch_init.o										\
-mem_alloc.o
+mem_alloc.o \
+hw_init.o
 
+ifeq ($(CONFIG_ARCH_SIMPLE_SAM7),defined)
+subdirs+=sam7
+endif
 
-ifeq ($(CONFIG_CPU_AVR),defined)
+ifeq ($(CONFIG_ARCH_SIMPLE_ATMEGA),defined)
 subdirs+=atmega
 endif
 
