--- a/arch/simple/simple.config
+++ b/arch/simple/simple.config
@@ -42,3 +42,8 @@ default CONFIG_CPU_RESET_ADDR
 desc Whether we have to copy .data from Rom/Flash before init
 default undefined
 %config end
+
+%config CONFIG_ARCH_SIMPLE_HW_INIT
+desc Whether we have an hardware-specific initialization routine
+default undefined
+%config end
