--- a/arch/soclib/soclib.config
+++ b/arch/soclib/soclib.config
@@ -9,11 +9,13 @@ provide CONFIG_HEXO_MMU_PAGESIZE=4096
 
 %config CONFIG_ARCH_SOCLIB_RAMLOCK
 desc Enable use of ramlock devices instead of cpu atomic operations
+parent CONFIG_ARCH_SOCLIB
 default undefined
 %config end
 
 %config CONFIG_SOCLIB_MEMCHECK
 desc Enable instrumentation with the SocLib memory checker ISS wrapper
+parent CONFIG_ARCH_SOCLIB
 default undefined
 exclude CONFIG_HEXO_MEMALLOC_GUARD
 depend CONFIG_HEXO_MEMALLOC_ALGO
