--- a/drivers/device/icu/arm/icu-arm.config
+++ b/drivers/device/icu/arm/icu-arm.config
@@ -1,6 +1,6 @@
 
 %config CONFIG_DRIVER_ICU_ARM
-desc enable PowerPC interrupt controller unit support
+desc enable ARM interrupt controller unit support
 default defined
 parent CONFIG_CPU_ARM
 provide CONFIG_DRIVER_ICU
