--- a/drivers/device/drivers.config
+++ b/drivers/device/drivers.config
@@ -44,3 +44,22 @@ flags nodefine
 desc At least one block device driver must be enabled to have it defined
 %config end
 
+%config CONFIG_DRIVER_SPI
+flags nodefine
+desc At least one SPI driver must be enabled to have it defined
+%config end
+
+%config CONFIG_DRIVER_LCD
+flags nodefine
+desc At least one LCD driver must be enabled to have it defined
+%config end
+
+%config CONFIG_DRIVER_GPIO
+flags nodefine
+desc At least one GPIO driver must be enabled to have it defined
+%config end
+
+%config CONFIG_DRIVER_I2C
+flags nodefine
+desc At least one I2C driver must be enabled to have it defined
+%config end
