update SRL \& MWMR

--- a/libmwmr/mwmr.config
+++ b/libmwmr/mwmr.config
@@ -9,6 +9,7 @@ single CONFIG_MWMR_SOCLIB CONFIG_MWMR_PTHREAD
 %config CONFIG_MWMR_SOCLIB
 desc Mwmr on SOCLIB, with hardware protocol compatibility
 parent CONFIG_MWMR
+provide CONFIG_MWMR
 depend CONFIG_MUTEK_SCHEDULER
 depend CONFIG_ARCH_SOCLIB
 %config end
@@ -16,12 +17,14 @@ depend CONFIG_ARCH_SOCLIB
 %config CONFIG_MWMR_PTHREAD
 desc Mwmr on Pthreads, with no hardware protocol compatibility
 parent CONFIG_MWMR
+provide CONFIG_MWMR
 depend CONFIG_PTHREAD
 %config end
 
 %config CONFIG_MWMR_INSTRUMENTATION
 desc Mwmr timing observation, only under SRL
 parent CONFIG_MWMR
+require CONFIG_MWMR_SOCLIB
 require CONFIG_SRL
 %config end
 
