--- a/libsrl/Makefile
+++ b/libsrl/Makefile
@@ -1,8 +1,8 @@
 
-objs = main.o srl_log.o
+objs = main.o
 
-ifeq ($(CONFIG_PTHREAD),undefined)
-objs += barrier.o sched_wait.o
+ifeq ($(CONFIG_SRL_SOCLIB),defined)
+objs += barrier.o sched_wait.o srl_log.o hw_init.o
 else
 objs += posix_wait_cycles.o
 endif
