--- a/libsrl/srl.config
+++ b/libsrl/srl.config
@@ -3,12 +3,28 @@
 desc MutekS API
 provide CONFIG_MODULES=+libsrl:%CONFIGPATH
 depend CONFIG_MUTEK_SCHEDULER
-depend CONFIG_ARCH_SOCLIB
 depend CONFIG_MWMR
-depend CONFIG_MWMR_SOCLIB
-require CONFIG_MUTEK_MAIN=undefined
+require CONFIG_SRL_SOCLIB CONFIG_SRL_STD
+single CONFIG_SRL_SOCLIB CONFIG_SRL_STD
 %config end
 
-%config CONFIG_SRL_NTTY
-desc Total TTYs
+%config CONFIG_SRL_SOCLIB
+desc MutekS API for SoCLib
+depend CONFIG_MUTEK_SCHEDULER
+depend CONFIG_ARCH_SOCLIB
+provide CONFIG_MWMR_SOCLIB
+exclude CONFIG_MUTEK_MAIN
+%config end
+
+%config CONFIG_SRL_STD
+desc MutekS API for standard architectures
+depend CONFIG_MUTEK_MAIN
+provide CONFIG_PTHREAD
+provide CONFIG_MWMR_PTHREAD
+%config end
+
+%config CONFIG_SRL_MULTI_TTY
+desc Whether we can support multiple TTYs for the application
+parent CONFIG_SRL_SOCLIB
+depend CONFIG_SRL_SOCLIB
 %config end
