Make SRL default verbosity a config token

--- a/libsrl/srl.config
+++ b/libsrl/srl.config
@@ -28,3 +28,10 @@ desc Whether we can support multiple TTYs for the application
 parent CONFIG_SRL_SOCLIB
 depend CONFIG_SRL_SOCLIB
 %config end
+
+%config CONFIG_SRL_VERBOSITY
+desc Minimal verbosity level for SRL messages
+parent CONFIG_SRL
+require CONFIG_SRL
+default NONE
+%config end
