--- a/arch/emu/emu.config
+++ b/arch/emu/emu.config
@@ -5,6 +5,8 @@ provide	CONFIG_ARCH_NAME=emu
 provide CONFIG_MODULES=+arch:%CONFIGPATH
 require CONFIG_ARCH_EMU_MEMORY
 require CONFIG_CPU_X86_EMU CONFIG_CPU_X86_64_EMU
+require CONFIG_ARCH_EMU_LINUX CONFIG_ARCH_EMU_DARWIN
+single  CONFIG_ARCH_EMU_LINUX CONFIG_ARCH_EMU_DARWIN
 exclude CONFIG_SMP CONFIG_CLUSTER
 %config end
 
@@ -14,3 +16,12 @@ parent CONFIG_ARCH_EMU
 default 16777216
 %config end
 
+%config CONFIG_ARCH_EMU_DARWIN
+desc Target system is Darwin (MacOS X)
+parent CONFIG_ARCH_EMU
+%config end
+
+%config CONFIG_ARCH_EMU_LINUX
+desc Target system is Linux
+parent CONFIG_ARCH_EMU
+%config end
