Fix MutekH compilation

--- a/libsrl/Makefile
+++ b/libsrl/Makefile
@@ -2,7 +2,9 @@
 objs = main.o
 
 ifeq ($(CONFIG_SRL_SOCLIB),defined)
-objs += barrier.o sched_wait.o srl_log.o hw_init.o
-else
-objs += posix_wait_cycles.o
+objs += srl_log.o hw_init.o
+endif
+
+ifeq ($(CONFIG_PTHREAD),undefined)
+objs += barrier.o sched_wait.o posix_wait_cycles.o
 endif
