--- a/libsrl/Makefile
+++ b/libsrl/Makefile
@@ -5,6 +5,8 @@ ifeq ($(CONFIG_SRL_SOCLIB),defined)
 objs += srl_log.o hw_init.o
 endif
 
-ifeq ($(CONFIG_PTHREAD),undefined)
-objs += barrier.o sched_wait.o posix_wait_cycles.o
+ifeq ($(CONFIG_PTHREAD),defined)
+objs += posix_wait_cycles.o
+else
+objs += barrier.o sched_wait.o
 endif
