Add virtual memory support

--- a/arch/soclib/soclib.config
+++ b/arch/soclib/soclib.config
@@ -4,7 +4,24 @@ desc SocLib platform support
 default	undefined
 provide	CONFIG_ARCH_NAME=soclib
 provide CONFIG_MODULES=+arch:%CONFIGPATH
-provide CONFIG_HEXO_MMU_PAGESIZE=4096
+%config end
+
+%config CONFIG_ARCH_SOCLIB_VCACHE_32
+desc SocLib VCache with 32 bit physical address
+exclude CONFIG_ARCH_SOCLIB_VCACHE_40
+provide CONFIG_HEXO_MMU_PADDR=32
+provide CONFIG_HEXO_MMU_VADDR=32
+require CONFIG_HEXO_MMU_PAGESIZE=4096
+default undefined
+%config end
+
+%config CONFIG_ARCH_SOCLIB_VCACHE_40
+desc SocLib VCache with 40 bit physical address
+exclude CONFIG_ARCH_SOCLIB_VCACHE_32
+provide CONFIG_HEXO_MMU_PADDR=40
+provide CONFIG_HEXO_MMU_VADDR=32
+require CONFIG_HEXO_MMU_PAGESIZE=4096
+default undefined
 %config end
 
 %config CONFIG_ARCH_SOCLIB_RAMLOCK
