--- a/hexo/hexo.config
+++ b/hexo/hexo.config
@@ -83,7 +83,8 @@ parent CONFIG_HEXO_MMU
 %config CONFIG_HEXO_MMU
 desc Enable MMU driver
 default undefined
-require CONFIG_HEXO_MMU_PAGESIZE
+require CONFIG_HEXO_MMU_PADDR
+require CONFIG_HEXO_MMU_VADDR
 require CONFIG_HEXO_MEMALLOC_ALGO
 require CONFIG_HEXO_CPU_MMU CONFIG_HEXO_ARCH_MMU
 single CONFIG_HEXO_CPU_MMU CONFIG_HEXO_ARCH_MMU
@@ -94,28 +95,14 @@ desc Virtual memory physical page size
 parent CONFIG_HEXO_MMU
 %config end
 
-%config CONFIG_HEXO_MMU_USER_START
-desc Virtual memory minimal user accessible start address
-parent CONFIG_HEXO_MMU
-default 0x40000000
+%config CONFIG_HEXO_MMU_PADDR
+desc Physical address size uses by MMU
+default undefined
 %config end
 
-%config CONFIG_HEXO_MMU_USER_END
-desc Virtual memory minimal user accessible end address
-parent CONFIG_HEXO_MMU
-default 0xc0000000
-%config end
-
-%config CONFIG_HEXO_MMU_INITIAL_START
-desc Size of initial memory reserved for kernel use
-default 0x00000000
-parent CONFIG_HEXO_MMU
-%config end
-
-%config CONFIG_HEXO_MMU_INITIAL_END
-desc Size of initial memory reserved for kernel use
-default 0x00800000
-parent CONFIG_HEXO_MMU
+%config CONFIG_HEXO_MMU_VADDR
+desc Virtual address sire uses by MMU
+default undefined
 %config end
 
 %config CONFIG_HEXO_INTTYPES_DEPRECATED
