Make all archs have ram/rom addr+size

--- a/arch/arch.config
+++ b/arch/arch.config
@@ -28,3 +28,18 @@ desc	Platform name configuration token
 flags	nodefine
 %config end
 
+%config CONFIG_RAM_ADDR
+desc RAM memory base address on this platform
+%config end
+
+%config CONFIG_RAM_SIZE
+desc RAM memory size in bytes on this platform
+%config end
+
+%config CONFIG_ROM_ADDR
+desc ROM memory base address on this platform
+%config end
+
+%config CONFIG_ROM_SIZE
+desc ROM memory size in bytes on this platform
+%config end
