--- a/arch/ibmpc/ibmpc.config
+++ b/arch/ibmpc/ibmpc.config
@@ -4,6 +4,10 @@ desc IBM PC platform support
 default	undefined
 provide	CONFIG_ARCH_NAME=ibmpc
 provide CONFIG_MODULES=+arch:%CONFIGPATH
+provide CONFIG_ROM_ADDR=0x00100000
+provide CONFIG_ROM_SIZE=0x00200000
+provide CONFIG_RAM_ADDR=0x00300000
+provide CONFIG_RAM_SIZE=0x00200000
 %config end
 
 %config CONFIG_ARCH_IBMPC_MEMORY
