--- a/arch/simple/sam7/sam7.config
+++ b/arch/simple/sam7/sam7.config
@@ -10,10 +10,10 @@ provide CONFIG_ARCH_SIMPLE_COPY_DATA
 %config CONFIG_ARCH_SIMPLE_SAM7X256
 desc Provide all configuration tokens suitable for the AT91SAM7X256 device
 provide CONFIG_ARCH_SIMPLE_SAM7
-provide CONFIG_ARCH_SIMPLE_RAM_ADDR=0x200000
-provide CONFIG_ARCH_SIMPLE_RAM_SIZE=0x10000
-provide CONFIG_ARCH_SIMPLE_ROM_ADDR=0x0000
-provide CONFIG_ARCH_SIMPLE_ROM_SIZE=0x40000
+provide CONFIG_RAM_ADDR=0x200000
+provide CONFIG_RAM_SIZE=0x10000
+provide CONFIG_ROM_ADDR=0x0000
+provide CONFIG_ROM_SIZE=0x40000
 %config end
 
 %config CONFIG_ARCH_SIMPLE_OLIMEX_SAM7_EX256
