--- a/arch/simple/atmega/atmega.config
+++ b/arch/simple/atmega/atmega.config
@@ -11,10 +11,10 @@ provide CONFIG_ARCH_SIMPLE_COPY_DATA
 desc Provide all configuration tokens suitable for the Atmega128 device.
 parent CONFIG_ARCH_SIMPLE_ATMEGA
 provide CONFIG_ARCH_SIMPLE_ATMEGA
-provide CONFIG_ARCH_SIMPLE_RAM_ADDR=0x0100
-provide CONFIG_ARCH_SIMPLE_RAM_SIZE=0xf00
-provide CONFIG_ARCH_SIMPLE_ROM_ADDR=0x0000
-provide CONFIG_ARCH_SIMPLE_ROM_SIZE=0x20000
+provide CONFIG_RAM_ADDR=0x0100
+provide CONFIG_RAM_SIZE=0xf00
+provide CONFIG_ROM_ADDR=0x0000
+provide CONFIG_ROM_SIZE=0x20000
 provide CONFIG_CPU_AVR_IRQ_COUNT=28
 provide CONFIG_CPU_AVR_GCCMCU=atmega128
 provide CONFIG_CPU_AVR_ENHANCED
