Make reset handlers optional

--- a/cpu/cpu.config
+++ b/cpu/cpu.config
@@ -34,6 +34,13 @@ default undefined
 flags nodefine
 %config end
 
+%config CONFIG_CPU_RESET_HANDLER
+desc Whether the kernel has to implement a reset handler, or this kernel
+desc is designed to be booted from a bootloader
+default defined
+require CONFIG_CPU_RESET_ADDR
+%config end
+
 %config CONFIG_CPU_ENDIAN_BIG
 desc Processor is big endian
 %config end
