--- a/cpu/mips/Makefile
+++ b/cpu/mips/Makefile
@@ -1,9 +1,12 @@
 
 objs = 											\
 interrupts.o										\
-boot.o											\
 cpu_init.o										\
 cpu_context.o
+
+ifeq ($(CONFIG_CPU_RESET_HANDLER),defined)
+objs += boot.o
+endif
 
 copy = ldscript
 
