--- a/cpu/arm/Makefile
+++ b/cpu/arm/Makefile
@@ -3,10 +3,12 @@ objs = 											\
 cpu_init.o										\
 cpu_context.o
 
+ifeq ($(CONFIG_CPU_RESET_HANDLER),defined)
 ifeq ($(CONFIG_CPU_ARM_M_PROFILE),defined)
 objs += boot_m.o
 else
 objs += boot.o
+endif
 endif
 
 copy = ldscript
