Make the drivers globally and statically registered, change the enum device prototype

--- a/drivers/device/drivers.config
+++ b/drivers/device/drivers.config
@@ -49,6 +49,11 @@ flags nodefine
 desc At least one SPI driver must be enabled to have it defined
 %config end
 
+%config CONFIG_DRIVER_ENUM
+flags nodefine
+desc At least one ENUM driver must be enabled to have it defined
+%config end
+
 %config CONFIG_DRIVER_LCD
 flags nodefine
 desc At least one LCD driver must be enabled to have it defined
