--- a/drivers/device/enum/isapnp/enum-isapnp.config
+++ b/drivers/device/enum/isapnp/enum-isapnp.config
@@ -4,5 +4,6 @@ desc enable ISA PnP bus enumeration
 default undefined
 depend CONFIG_ARCH_IBMPC
 depend CONFIG_HEXO_DEVICE_TREE
+provide CONFIG_DRIVER_ENUM
 %config end
 
