Add a root enumerator device. Use it with the device tree when enabled. Add a (generic) hook in arch_init for it (for now).

--- a/hexo/hexo.config
+++ b/hexo/hexo.config
@@ -2,6 +2,7 @@
 %config CONFIG_HEXO_DEVICE_TREE
 desc Have all device nodes sorted in a tree form
 default defined
+provide CONFIG_DRIVER_ENUM_ROOT
 %config end
 
 %config CONFIG_HEXO_IPI
@@ -109,4 +110,3 @@ default undefined
 desc Mark short, int and long compiler types has deprecated because their size may vary between architectures
 default defined
 %config end
-
