--- a/drivers/device/enum/Makefile
+++ b/drivers/device/enum/Makefile
@@ -7,3 +7,7 @@ ifeq ($(CONFIG_DRIVER_ENUM_ISAPNP), defined)
  subdirs += isapnp
 endif
 
+ifeq ($(CONFIG_DRIVER_ENUM_ROOT), defined)
+ subdirs += root
+endif
+
