--- a/drivers/device/enum/Makefile
+++ b/drivers/device/enum/Makefile
@@ -3,6 +3,10 @@ ifeq ($(CONFIG_DRIVER_ENUM_PCI), defined)
  subdirs += pci
 endif
 
+ifeq ($(CONFIG_DRIVER_ENUM_FDT), defined)
+ subdirs += fdt
+endif
+
 ifeq ($(CONFIG_DRIVER_ENUM_ISAPNP), defined)
  subdirs += isapnp
 endif
