Implement relacatable exception vectors where possible Rework the SoCLib ldscript Implement copying data from ROM on boot and merge token with arch/simple Only use RAM/ROM BEGIN/SIZE and not ldscript hacks Allow having text/exceptions/reset in 1, 2 or 3 segments

--- a/arch/arch.config
+++ b/arch/arch.config
@@ -43,3 +43,8 @@ desc ROM memory base address on this platform
 %config CONFIG_ROM_SIZE
 desc ROM memory size in bytes on this platform
 %config end
+
+%config CONFIG_DATA_FROM_ROM
+desc Whether we have to copy .data from Rom/Flash before init
+default undefined
+%config end
