--- a/arch/simple/simple.config
+++ b/arch/simple/simple.config
@@ -6,17 +6,13 @@ provide	CONFIG_ARCH_NAME=simple
 provide CONFIG_MODULES=+arch:%CONFIGPATH
 require CONFIG_ARCH_SIMPLE_RESET_ADDR
 exclude CONFIG_SMP CONFIG_CLUSTER
+provide CONFIG_DATA_FROM_ROM
 %config end
 
 %config CONFIG_ARCH_SIMPLE_RESET_ADDR
 desc Set the reset vector address
 parent CONFIG_ARCH_SIMPLE
 default CONFIG_CPU_RESET_ADDR
-%config end
-
-%config CONFIG_ARCH_SIMPLE_COPY_DATA
-desc Whether we have to copy .data from Rom/Flash before init
-default undefined
 %config end
 
 %config CONFIG_ARCH_SIMPLE_HW_INIT
