--- a/cpu/arm/arm.config
+++ b/cpu/arm/arm.config
@@ -7,6 +7,7 @@ provide CONFIG_CPU_NAME=arm
 provide CONFIG_MODULES=+cpu:%CONFIGPATH
 provide CONFIG_CPU_ENDIAN_LITTLE
 provide CONFIG_COMPILE_SIZEOF_INT=4
+provide CONFIG_CPU_EXCEPTION_FIXED_ADDRESS=0
 single	CONFIG_CPU_ARM_SOCLIB CONFIG_CPU_ARM_7TDMI
 %config end
 
