--- a/cpu/cpu.config
+++ b/cpu/cpu.config
@@ -41,6 +41,15 @@ default defined
 require CONFIG_CPU_RESET_ADDR
 %config end
 
+%config CONFIG_CPU_EXCEPTION_FIXED_ADDRESS
+desc Processor mandatory address exception vectors
+default undefined
+%config end
+
+%config CONFIG_CPU_EXCEPTION_ALIGN
+desc Processor mandatory alignment of exception vectors
+%config end
+
 %config CONFIG_CPU_ENDIAN_BIG
 desc Processor is big endian
 %config end
