--- a/cpu/mips/mips.config
+++ b/cpu/mips/mips.config
@@ -11,6 +11,7 @@ provide CONFIG_CPU_NAME=mips
 provide CONFIG_MODULES=+cpu:%CONFIGPATH
 provide CONFIG_CPU_RESET_ADDR=0xbfc00000
 provide CONFIG_COMPILE_SIZEOF_INT=4
+provide CONFIG_CPU_EXCEPTION_ALIGN=0x00001000
 %config end
 
 %config CONFIG_CPU_MIPS_VERSION
