--- a/cpu/ppc/ppc.config
+++ b/cpu/ppc/ppc.config
@@ -9,5 +9,6 @@ provide CONFIG_MODULES=+cpu:%CONFIGPATH
 provide CONFIG_CPU_RESET_ADDR=0xfffffffc
 provide CONFIG_CPU_ENDIAN_BIG
 provide CONFIG_COMPILE_SIZEOF_INT=4
+provide CONFIG_CPU_EXCEPTION_ALIGN=0x00010000
 %config end
 
