Add a memory device driver

--- a/drivers/device/drivers.config
+++ b/drivers/device/drivers.config
@@ -68,3 +68,8 @@ desc At least one GPIO driver must be enabled to have it defined
 flags nodefine
 desc At least one I2C driver must be enabled to have it defined
 %config end
+
+%config CONFIG_DRIVER_MEM
+flags nodefine
+desc At least one MEM driver must be enabled to have it defined
+%config end
