--- a/drivers/device/enum/fdt/enum-fdt.config
+++ b/drivers/device/enum/fdt/enum-fdt.config
@@ -5,5 +5,6 @@ default undefined
 depend CONFIG_FDT
 depend CONFIG_HEXO_DEVICE_TREE
 provide CONFIG_DRIVER_ENUM
+provide CONFIG_DRIVER_MEM_MEMORY
 %config end
 
