Make hardware initialization a token: From FDT or user/arch, add built-in FDT hooks in CPUs

--- a/arch/arch.config
+++ b/arch/arch.config
@@ -18,6 +18,7 @@ desc	meta configuration token used to impose requirements
 default defined
 flags	mandatory noexport nodefine
 require	CONFIG_ARCH_NAME
+require CONFIG_ARCH_HW_INIT_META
 single	CONFIG_ARCH_IBMPC CONFIG_ARCH_SOCLIB CONFIG_ARCH_EMU
 %config end
 
@@ -46,5 +47,25 @@ desc ROM memory size in bytes on this platform
 
 %config CONFIG_DATA_FROM_ROM
 desc Whether we have to copy .data from Rom/Flash before init
+default undefined
+%config end
+
+%config CONFIG_ARCH_HW_INIT_META
+desc	Meta configuration token used to impose hardware initialization requirements
+default defined
+flags	mandatory noexport nodefine
+single	CONFIG_ARCH_DEVICE_TREE CONFIG_ARCH_HW_INIT
+require CONFIG_ARCH_DEVICE_TREE CONFIG_ARCH_HW_INIT
+%config end
+
+%config CONFIG_ARCH_DEVICE_TREE
+desc Whether we have a Flattened Device Tree definition
+default undefined
+provide CONFIG_DRIVER_ENUM_FDT
+provide CONFIG_HEXO_DEVICE_TREE
+%config end
+
+%config CONFIG_ARCH_HW_INIT
+desc Whether arch (or user) provides a arch_hw_init() function
 default undefined
 %config end
