--- a/arch/simple/simple.config
+++ b/arch/simple/simple.config
@@ -7,6 +7,7 @@ provide CONFIG_MODULES=+arch:%CONFIGPATH
 require CONFIG_ARCH_SIMPLE_RESET_ADDR
 exclude CONFIG_SMP CONFIG_CLUSTER
 provide CONFIG_DATA_FROM_ROM
+provide	CONFIG_ARCH_HW_INIT
 %config end
 
 %config CONFIG_ARCH_SIMPLE_RESET_ADDR
