Allow user to implement an hardware initialization

--- a/arch/arch.config
+++ b/arch/arch.config
@@ -54,8 +54,8 @@ default undefined
 desc	Meta configuration token used to impose hardware initialization requirements
 default defined
 flags	mandatory noexport nodefine
-single	CONFIG_ARCH_DEVICE_TREE CONFIG_ARCH_HW_INIT
-require CONFIG_ARCH_DEVICE_TREE CONFIG_ARCH_HW_INIT
+single	CONFIG_ARCH_DEVICE_TREE CONFIG_ARCH_HW_INIT CONFIG_ARCH_HW_INIT_USER
+require CONFIG_ARCH_DEVICE_TREE CONFIG_ARCH_HW_INIT CONFIG_ARCH_HW_INIT_USER
 %config end
 
 %config CONFIG_ARCH_DEVICE_TREE
@@ -66,6 +66,11 @@ provide CONFIG_HEXO_DEVICE_TREE
 %config end
 
 %config CONFIG_ARCH_HW_INIT
-desc Whether arch (or user) provides a arch_hw_init() function
+desc Whether arch provides a arch_hw_init() function
+default undefined
+%config end
+
+%config CONFIG_ARCH_HW_INIT_USER
+desc Whether user provides a user_hw_init() function
 default undefined
 %config end
