More correctness of config tokens

--- a/cpu/arm/arm.config
+++ b/cpu/arm/arm.config
@@ -63,7 +63,7 @@ desc Microcontroller profile (ARM-7M)
 parent CONFIG_CPU_ARM
 require CONFIG_CPU_ARM
 exclude CONFIG_SMP
-provide CONFIG_ARCH_SIMPLE_COPY_DATA
+provide CONFIG_DATA_FROM_ROM
 %config end
 
 %config CONFIG_CPU_ARM_7TDMI
