Fix emu CONFIG_CPU_RESET_HANDLER, add config files for darwin

--- a/arch/emu/emu.config
+++ b/arch/emu/emu.config
@@ -3,6 +3,7 @@
 desc Linux Emulation platform support
 provide	CONFIG_ARCH_NAME=emu
 provide CONFIG_MODULES=+arch:%CONFIGPATH
+provide	CONFIG_ARCH_HW_INIT
 require CONFIG_ARCH_EMU_MEMORY
 require CONFIG_CPU_X86_EMU CONFIG_CPU_X86_64_EMU
 require CONFIG_ARCH_EMU_LINUX CONFIG_ARCH_EMU_DARWIN
