--- a/cpu/cpu.config
+++ b/cpu/cpu.config
@@ -1,4 +1,6 @@
 
+%module Hexo
+
 %config CONFIG_CPU_MAXCOUNT
 desc Maximum CPU count
 default 1
@@ -58,6 +60,10 @@ desc Processor is big endian
 desc Processor is little endian
 %config end
 
+%config CONFIG_CPU_NONALIGNED_ACCESS
+desc Non-aligned memory access are supported by processor without special handling
+%config end
+
 ######################################################################
 
 %config CONFIG_CPU_META
@@ -65,7 +71,7 @@ desc	meta configuration token used to impose requirements
 default defined
 flags	mandatory noexport nodefine
 require	CONFIG_CPU_NAME
-single	CONFIG_CPU_X86 CONFIG_CPU_X86_EMU  CONFIG_CPU_X86_64_EMU CONFIG_CPU_MIPS CONFIG_CPU_AVR
+single	CONFIG_CPU_X86 CONFIG_CPU_X86_EMU CONFIG_CPU_X86_64_EMU CONFIG_CPU_MIPS CONFIG_CPU_AVR CONFIG_CPU_ARM CONFIG_CPU_PPC
 require CONFIG_CPU_ENDIAN_BIG CONFIG_CPU_ENDIAN_LITTLE
 %config end
 
