--- a/cpu/x86/x86.config
+++ b/cpu/x86/x86.config
@@ -1,4 +1,6 @@
 
+%module Hexo
+
 %config CONFIG_CPU_X86
 desc x86 processors support
 default undefined
@@ -12,6 +14,7 @@ provide CONFIG_CPU_RESET_ADDR=0x000ffff0
 provide CONFIG_CPU_ENDIAN_LITTLE
 provide CONFIG_COMPILE_SIZEOF_INT=4
 provide CONFIG_HEXO_MMU_PAGESIZE=4096
+provide CONFIG_CPU_NONALIGNED_ACCESS
 %config end
 
 %config CONFIG_CPU_X86_ALIGNCHECK
