--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -1,4 +1,6 @@
 
+%module Mutek
+
 %config CONFIG_MUTEK_MAIN
 desc Enable Mutek global intialization. provide mutek_main() and mutek_main_smp() functions.
 desc Can be disabled if application code handle all the initialization stuff.
