--- a/cpu/x86-emu/emu.config
+++ b/cpu/x86-emu/emu.config
@@ -1,4 +1,6 @@
 
+%module Hexo
+
 %config CONFIG_CPU_X86_EMU
 desc Linux Emulation processor support
 default undefined
@@ -9,5 +11,6 @@ provide CONFIG_CPU_NAME=x86-emu
 provide CONFIG_CPU_CACHE CONFIG_CPU_CACHE_COHERENCY
 provide CONFIG_CPU_ENDIAN_LITTLE
 provide CONFIG_COMPILE_SIZEOF_INT=4
+provide CONFIG_CPU_NONALIGNED_ACCESS
 %config end
 
