--- a/libdsrl/dsrl.config
+++ b/libdsrl/dsrl.config
@@ -9,7 +9,7 @@
 	#depend CONFIG_MWMR_SOCLIB
 	depend CONFIG_LIBLUA
 	depend CONFIG_VFS
-	depend CONFIG_RTLD
+	depend CONFIG_LIBELF_RTLD
 	#require CONFIG_MUTEK_MAIN=undefined
 	require CONFIG_ARCH_SOCLIB_RAMLOCK=undefined
 %config end
