--- a/libc/Makefile
+++ b/libc/Makefile
@@ -26,5 +26,5 @@ endif
 
 doc_headers = \
 	sys/stat.h fileops.h ctype.h unistd.h	\
-	semaphore.h fcntl.h errno.h stdio.h math.h time.h stdarg.h	\
+	semaphore.h fcntl.h errno.h stdio.h time.h stdarg.h	\
 	stddef.h stdint.h stdlib.h setjmp.h string.h assert.h limits.h
