--- a/libm/Makefile
+++ b/libm/Makefile
@@ -21,3 +21,6 @@ objs = 	k_standard.o k_rem_pio2.o \
 		s_log1p.o s_logb.o s_matherr.o s_modf.o s_nextafter.o \
 		s_rint.o s_scalbn.o s_signgam.o s_significand.o s_sin.o \
 		s_tan.o s_tanh.o
+
+doc_headers = math.h fdlibm.h
+
