device.c moved and doc

--- a/hexo/Makefile
+++ b/hexo/Makefile
@@ -3,8 +3,7 @@ objs =						\
 cpu.o						\
 init.o						\
 context.o					\
-mem_alloc.o					\
-device.o					
+mem_alloc.o
 
 ifeq ($(CONFIG_COMPILE_INSTRUMENT), defined)
 objs += instrument.o
