--- a/doc/mkdoc.conf
+++ b/doc/mkdoc.conf
@@ -9,12 +9,12 @@
 @setopt show_type_keyword
 @setopt show_module_subtitle
 @c @setopt hide_internal
-@setopt source_url_template {https://www.mutek.fr/trac/mutekh/browser/trunk/mutekh/@f?rev=917#L@n}
+@setopt source_url_template {https://www.mutek.fr/trac/mutekh/browser/trunk/mutekh/@f?rev=@r#L@n}
 @setopt multiple_symbol_def
 @setopt multiple_macro_def
 @setopt function_overloading {0}
 
 @ifopt doc_format {latex|texinfo}
  @setopt listify_tables
-@end group
+@end ifopt
 
