Removed most of the callbacks and wrote some doc

--- a/libelf/libelf.config
+++ b/libelf/libelf.config
@@ -1,3 +1,6 @@
+
+%module "Elf loader library"
+
 %config CONFIG_LIBELF
 desc "Enable ability to load (static) elf executables"
 provide CONFIG_MODULES=+librtld:%CONFIGPATH
@@ -6,13 +9,13 @@ depend CONFIG_VFS
 %config end
 
 %config CONFIG_LIBELF_DYNAMIC
-desc "Enable ability to load dynamic elf executables"
+desc "Support for dynamic elf executables"
 parent CONFIG_LIBELF
 default undefined
 %config end
 
 %config CONFIG_LIBELF_DEBUG
-desc "Enable libELF debbugging verbosity (0=nothing, 1=trace, 2=debug)"
+desc "Debbugging verbosity (0=nothing, 1=trace, 2=debug)"
 parent CONFIG_LIBELF
 default 0
 %config end
@@ -25,13 +28,13 @@ default defined
 
 
 %config CONFIG_LIBELF_RTLD
-desc "Enable RunTime LoaDer library (load and relocate dynamic elf executables)"
+desc "Support for relocatable dynamic elf executables"
 provide CONFIG_LIBELF
 provide CONFIG_LIBELF_DYNAMIC
 %config end
 
 %config CONFIG_LIBELF_RTLD_TLS
-desc "Provide 'Thread Local Storage' support for elf executables"
+desc "Provide 'Thread Local Storage' support for relocatable dynamic elf executables"
 parent CONFIG_LIBELF_RTLD
 default defined
 %config end
