Add a new CONFIG_CPU_RESET_SIZE token, CPU-provided

--- a/cpu/cpu.config
+++ b/cpu/cpu.config
@@ -36,11 +36,18 @@ default undefined
 flags nodefine
 %config end
 
+%config CONFIG_CPU_RESET_SIZE
+desc Processor reset vector size
+default undefined
+flags nodefine
+%config end
+
 %config CONFIG_CPU_RESET_HANDLER
 desc Whether the kernel has to implement a reset handler, or this kernel
 desc is designed to be booted from a bootloader
 default defined
 require CONFIG_CPU_RESET_ADDR
+require CONFIG_CPU_RESET_SIZE
 %config end
 
 %config CONFIG_CPU_EXCEPTION_FIXED_ADDRESS
