--- a/cpu/mips/mips.config
+++ b/cpu/mips/mips.config
@@ -12,6 +12,7 @@ provide CONFIG_CPU_CACHE
 provide CONFIG_CPU_NAME=mips
 provide CONFIG_MODULES=+cpu:%CONFIGPATH
 provide CONFIG_CPU_RESET_ADDR=0xbfc00000
+provide CONFIG_CPU_RESET_SIZE=0x2000
 provide CONFIG_COMPILE_SIZEOF_INT=4
 provide CONFIG_CPU_EXCEPTION_ALIGN=0x00001000
 %config end
