Initialize SoCLib platforms from FDT definition, create CPU ICU devices from Bootstrap CPU

--- a/arch/soclib/Makefile
+++ b/arch/soclib/Makefile
@@ -11,6 +11,10 @@ ifeq ($(CONFIG_SOCLIB_MEMCHECK), defined)
  objs += mem_checker.o
 endif
 
+ifeq ($(CONFIG_ARCH_DEVICE_TREE), defined)
+ objs += fdt_consumer.o
+endif
+
 ifeq ($(LINKING),1)
 
 meta = ldscript
