--- a/examples/hello/Makefile
+++ b/examples/hello/Makefile
@@ -2,5 +2,17 @@
 objs = hello.o
 
 ifeq ($(CONFIG_ARCH_SOCLIB),defined)
-objs += platform.o
+
+ifeq ($(CONFIG_CPU_MIPS),defined)
+objs += platform-mips.o
+endif
+
+ifeq ($(CONFIG_CPU_PPC),defined)
+objs += platform-ppc.o
+endif
+
+ifeq ($(CONFIG_CPU_ARM),defined)
+objs += platform-arm.o
+endif
+
 endif
