--- a/examples/hello/platform.dts
+++ b/examples/hello/platform.dts
@@ -13,24 +13,36 @@
 			name = "Mips,32";
 			device_type = "cpu";
 			reg = <0>;
+			icudev_type = "cpu:mips";
+			ipi_dev = &{/xicu@0};
+			ipi_no = <0>;
 		};
 
 		Mips,32@1 {
 			name = "Mips,32";
 			device_type = "cpu";
 			reg = <1>;
+			icudev_type = "cpu:mips";
+			ipi_dev = &{/xicu@0};
+			ipi_no = <0>;
 		};
 
 		Mips,32@2 {
 			name = "Mips,32";
 			device_type = "cpu";
 			reg = <2>;
+			icudev_type = "cpu:mips";
+			ipi_dev = &{/xicu@0};
+			ipi_no = <0>;
 		};
 
 		Mips,32@3 {
 			name = "Mips,32";
 			device_type = "cpu";
 			reg = <3>;
+			icudev_type = "cpu:mips";
+			ipi_dev = &{/xicu@0};
+			ipi_no = <0>;
 		};
 
 	};
@@ -38,24 +50,44 @@
 	tty@0 {
 	    device_type = "soclib:tty";
 		tty_count = <1>;
-		reg = <0x90600000 0x10>;
-		icudev = &{/icu@0};
-		irq = <1>;
+		reg = <0xd0200000 0x10>;
+		icudev = &{/xicu@0};
+		irq = <0>;
 	};
 
-	icu@0 {
-	    device_type = "soclib:icu";
-		input_count = <2>;
-		reg = <0x20600000 0x20>;
+	xicu@0 {
+	    device_type = "soclib:xicu";
+		input_count = <3>;
+		output_line_no = <0>;
+		reg = <0xd2200000 0x20>;
 		icudev = &{/cpus/Mips,32@0};
 		irq = <0>;
 	};
 
-	timer@0 {
-	    device_type = "soclib:timer";
-		timer_count = <1>;
-		reg = <0x01620000 0x10>;
-		icudev = &{/icu@0};
+	xicu@1 {
+	    device_type = "soclib:xicu";
+		input_count = <3>;
+		output_line_no = <1>;
+		reg = <0xd2200000 0x20>;
+		icudev = &{/cpus/Mips,32@0};
+		irq = <0>;
+	};
+
+	xicu@2 {
+	    device_type = "soclib:xicu";
+		input_count = <3>;
+		output_line_no = <2>;
+		reg = <0xd2200000 0x20>;
+		icudev = &{/cpus/Mips,32@0};
+		irq = <0>;
+	};
+
+	xicu@3 {
+	    device_type = "soclib:xicu";
+		input_count = <3>;
+		output_line_no = <3>;
+		reg = <0xd2200000 0x20>;
+		icudev = &{/cpus/Mips,32@0};
 		irq = <0>;
 	};
 
