--- a/cpu/x86/x86.config
+++ b/cpu/x86/x86.config
@@ -11,6 +11,7 @@ provide CONFIG_MODULES=+cpu:%CONFIGPATH
 provide CONFIG_CPU_CACHE CONFIG_CPU_CACHE_COHERENCY
 provide CONFIG_LIBC_STRING_ASM
 provide CONFIG_CPU_RESET_ADDR=0x000ffff0
+provide CONFIG_CPU_RESET_SIZE=0x100
 provide CONFIG_CPU_ENDIAN_LITTLE
 provide CONFIG_COMPILE_SIZEOF_INT=4
 provide CONFIG_HEXO_MMU_PAGESIZE=4096
