Add NUMA support

--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -165,6 +165,10 @@ parent CONFIG_MUTEK_MEMALLOC_GUARD
 depend CONFIG_COMPILE_INSTRUMENT
 %config end
 
+%config CONFIG_MUTEK_NUMA
+desc Support of non uniform memory access platform
+depend CONFIG_MUTEK_MEMALLOC_SMART
+%config end
 
 %config CONFIG_MUTEK_PRINTK
 desc Provide printk() for kernel messages
