FIX memory regions init

--- a/examples/libtermui_liblua/Makefile
+++ b/examples/libtermui_liblua/Makefile
@@ -1,3 +1,18 @@
 
-objs = getline_lua.o platform.o
+objs = getline_lua.o
 
+ifeq ($(CONFIG_ARCH_SOCLIB),defined)
+
+ifeq ($(CONFIG_CPU_MIPS),defined)
+objs += platform-mips.o
+endif
+
+ifeq ($(CONFIG_CPU_PPC),defined)
+objs += platform-ppc.o
+endif
+
+ifeq ($(CONFIG_CPU_ARM),defined)
+objs += platform-arm.o
+endif
+
+endif
