--- a/tools/hlink/Makefile
+++ b/tools/hlink/Makefile
@@ -1,4 +1,4 @@
 
 hetlink: hetlink.cc
-	g++ -Wall $(CFLAGS) -lelfpp hetlink.cc -o hetlink
+	g++ -Wall $(CFLAGS) -lelfpp args.c hetlink.cc -o hetlink
 
