added CONFIG_HETROM_ADDR, CONFIG_HETROM_SIZE and mem_hetrom

--- a/arch/arch.config
+++ b/arch/arch.config
@@ -33,23 +33,37 @@ flags	nodefine
 
 %config CONFIG_RAM_ADDR
 desc RAM memory base address on this platform
+require CONFIG_RAM_SIZE
 %config end
 
 %config CONFIG_RAM_SIZE
 desc RAM memory size in bytes on this platform
+require CONFIG_RAM_ADDR
 %config end
 
 %config CONFIG_ROM_ADDR
 desc ROM memory base address on this platform
+require CONFIG_ROM_SIZE
 %config end
 
 %config CONFIG_ROM_SIZE
 desc ROM memory size in bytes on this platform
+require CONFIG_ROM_ADDR
+%config end
+
+%config CONFIG_HETROM_ADDR
+desc Heterogeneous code ROM memory base address on this platform
+require CONFIG_HETROM_SIZE
+%config end
+
+%config CONFIG_HETROM_SIZE
+desc Heterogeneous code ROM memory size in bytes on this platform
+require CONFIG_HETROM_ADDR
 %config end
 
 %config CONFIG_DATA_FROM_ROM
-desc Whether we have to copy .data from Rom/Flash before init
-default undefined
+desc Whether we have to copy .data from Rom/Flash to Ram before init
+default defined
 %config end
 
 %config CONFIG_ARCH_HW_INIT_META
