config files updated, removed some default policies

--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -1,6 +1,14 @@
 
 %module Mutek
 
+%config CONFIG_MUTEK_META
+desc	meta configuration token used to impose requirements
+default defined
+flags	mandatory noexport nodefine
+require CONFIG_MUTEK_MEMALLOC_SIMPLE CONFIG_MUTEK_MEMALLOC_SMART
+single  CONFIG_MUTEK_MEMALLOC_SIMPLE CONFIG_MUTEK_MEMALLOC_SMART
+%config end
+
 %config CONFIG_MUTEK_MAIN
 desc Enable Mutek global intialization. provide mutek_main() and mutek_main_smp() functions.
 desc Can be disabled if application code handle all the initialization stuff.
@@ -22,6 +30,28 @@ desc Add builtin MutekH logo bitmap to the kernel
 depend CONFIG_DRIVER_FB
 %config end
 
+%config CONFIG_MUTEK_NUMA
+desc Support of non uniform memory access platform
+depend CONFIG_MUTEK_MEMALLOC_SMART
+%config end
+
+%config CONFIG_MUTEK_PRINTK
+desc Provide printk() for kernel messages
+default defined
+%config end
+
+%config CONFIG_PRINTF_ARG_SIMPLE
+desc libc printf() features are reduced
+default undefined
+%config end
+
+%config CONFIG_PRINTF_ARG_EXT
+desc libc printf support %S and %P extentions to dump buffers
+default defined
+%config end
+
+######################################################################
+#		Vmem
 
 %config CONFIG_VMEM
 desc Provide virtual memory support
@@ -42,6 +72,8 @@ require CONFIG_VMEM_PHYS_ALLOC
 desc Provide kernel virtual address space allocator
 %config end
 
+######################################################################
+#		Scheduler
 
 %config CONFIG_MUTEK_SCHEDULER
 desc Hexo scheduler feature is enabled
@@ -60,7 +92,7 @@ depend CONFIG_DRIVER_TIMER
 %config CONFIG_MUTEK_SCHEDULER_MIGRATION
 desc Scheduler algorithm use permanent context migration among available processors
 parent CONFIG_MUTEK_SCHEDULER
-default defined
+default undefined
 %config end
 
 %config CONFIG_MUTEK_SCHEDULER_STATIC
@@ -96,20 +128,20 @@ default defined
 desc Provide read/write locks based on hexo scheduler
 %config end
 
+######################################################################
+#		Memory allocator
 
 %config CONFIG_MUTEK_MEMALLOC_SIMPLE
 desc Enable use of simple memory allocation algorithm.
 desc Incremental memory allocation without freeing.
 default undefined
-exclude CONFIG_MUTEK_MEMALLOC_SMART
 %config end
 
 %config CONFIG_MUTEK_MEMALLOC_SMART
 desc Enable use of memory allocation algorithm.
-default defined
+default undefined
 require CONFIG_MUTEK_MEMALLOC_ALGO_FIRSTFIT CONFIG_MUTEK_MEMALLOC_ALGO_BESTFIT
 single CONFIG_MUTEK_MEMALLOC_ALGO_FIRSTFIT CONFIG_MUTEK_MEMALLOC_ALGO_BESTFIT
-exclude CONFIG_MUTEK_MEMALLOC_SIMPLE
 %config end
 
 %config CONFIG_MUTEK_MEMALLOC_ALGO_FIRSTFIT
@@ -165,22 +197,3 @@ parent CONFIG_MUTEK_MEMALLOC_GUARD
 depend CONFIG_COMPILE_INSTRUMENT
 %config end
 
-%config CONFIG_MUTEK_NUMA
-desc Support of non uniform memory access platform
-depend CONFIG_MUTEK_MEMALLOC_SMART
-%config end
-
-%config CONFIG_MUTEK_PRINTK
-desc Provide printk() for kernel messages
-default defined
-%config end
-
-%config CONFIG_PRINTF_ARG_SIMPLE
-desc libc printf() features are reduced
-default undefined
-%config end
-
-%config CONFIG_PRINTF_ARG_EXT
-desc libc printf support %S and %P extentions to dump buffers
-default defined
-%config end
