CONFIG_(HEXO_)DEVICE_TREE rename

--- a/arch/arch.config
+++ b/arch/arch.config
@@ -78,7 +78,7 @@ require CONFIG_ARCH_DEVICE_TREE CONFIG_ARCH_HW_INIT CONFIG_ARCH_HW_INIT_USER
 desc Whether we have a Flattened Device Tree definition
 default undefined
 provide CONFIG_DRIVER_ENUM_FDT
-provide CONFIG_HEXO_DEVICE_TREE
+provide CONFIG_DEVICE_TREE
 %config end
 
 %config CONFIG_ARCH_HW_INIT
