--- a/drivers/device/drivers.config
+++ b/drivers/device/drivers.config
@@ -1,4 +1,12 @@
 
+%module Devices
+
+%config CONFIG_DEVICE_TREE
+desc Have all device nodes sorted in a tree form
+default defined
+provide CONFIG_DRIVER_ENUM_ROOT
+%config end
+
 %config CONFIG_DRIVER_TTY
 flags nodefine
 desc At least one tty device driver must be enabled to have it defined
