--- a/drivers/device/enum/fdt/enum-fdt.config
+++ b/drivers/device/enum/fdt/enum-fdt.config
@@ -3,7 +3,7 @@
 desc Provide support for device enumeration from a Flat Device Tree
 default undefined
 depend CONFIG_FDT
-depend CONFIG_HEXO_DEVICE_TREE
+depend CONFIG_DEVICE_TREE
 provide CONFIG_DRIVER_ENUM
 provide CONFIG_DRIVER_MEM_MEMORY
 %config end
