--- a/drivers/device/enum/pci/enum-pci.config
+++ b/drivers/device/enum/pci/enum-pci.config
@@ -3,7 +3,7 @@
 desc enable PCI bus enumeration
 default undefined
 depend CONFIG_ARCH_IBMPC
-depend CONFIG_HEXO_DEVICE_TREE
+depend CONFIG_DEVICE_TREE
 provide CONFIG_DRIVER_ENUM
 %config end
 
