Add SAM7 timer suppport

--- a/arch/simple/sam7/sam7.config
+++ b/arch/simple/sam7/sam7.config
@@ -26,11 +26,12 @@ provide CONFIG_DRIVER_SPI_SPI6088D
 provide CONFIG_DRIVER_I2C_TWI6061A
 
 desc All-in-one configuration for Olimex SAM7-EX256 dev board
-# provide CONFIG_DRIVER_CHAR_SAM7DBGU
+provide CONFIG_DRIVER_CHAR_SAM7DBGU
 provide CONFIG_DRIVER_BLOCK_SD_MMC
 provide CONFIG_DRIVER_ICU_SAM7
 provide CONFIG_DRIVER_GPIO_SAM7
 provide CONFIG_DRIVER_INPUT_MT5F
+provide CONFIG_DRIVER_TIMER_PITC_6079A
 provide CONFIG_DRIVER_LCD_PCF8833
 provide CONFIG_DRIVER_LCD_S1D15G00
 %config end
