--- a/drivers/device/timer/Makefile
+++ b/drivers/device/timer/Makefile
@@ -1,13 +1,17 @@
 
 ifeq ($(CONFIG_DRIVER_TIMER_8253), defined)
- subdirs += 8253
+subdirs += 8253
 endif
 
 ifeq ($(CONFIG_DRIVER_TIMER_EMU), defined)
- subdirs += emu
+subdirs += emu
 endif
 
 ifeq ($(CONFIG_DRIVER_TIMER_SOCLIB), defined)
- subdirs += soclib
+subdirs += soclib
+endif
+
+ifeq ($(CONFIG_DRIVER_TIMER_PITC_6079A), defined)
+subdirs += pitc_6079a
 endif
 
