Add early console support for SoCLib

--- a/arch/soclib/soclib.config
+++ b/arch/soclib/soclib.config
@@ -8,6 +8,14 @@ provide	CONFIG_ARCH_NAME=soclib
 provide CONFIG_MODULES=+arch:%CONFIGPATH
 %config end
 
+%config CONFIG_SOCLIB_EARLY_CONSOLE
+desc SoCLib console output on a TTY at fixed address
+desc before device initialization
+parent CONFIG_ARCH_SOCLIB
+depend CONFIG_ARCH_SOCLIB
+default undefined
+%config end
+
 %config CONFIG_ARCH_SOCLIB_VCACHE_32
 desc SocLib VCache with 32 bit physical address
 exclude CONFIG_ARCH_SOCLIB_VCACHE_40
