--- a/arch/soclib/Makefile
+++ b/arch/soclib/Makefile
@@ -3,6 +3,10 @@ objs = 											\
 arch_init.o										\
 mem_init.o
 
+ifneq ($(CONFIG_SOCLIB_EARLY_CONSOLE),undefined)
+objs += early_console.o
+endif
+
 ifeq ($(CONFIG_HEXO_MMU), defined)
 objs += mmu.o
 endif
