--- a/scripts/global.config
+++ b/scripts/global.config
@@ -61,3 +61,6 @@ provide CONFIG_DEBUG_SPINLOCK_LIMIT=1000000000
 desc Enable 32bits deadline counter for spinlocks and assert() counter never reachs 0
 %config end
 
+%config CONFIG_HET_BUILD
+desc Heterogeneous build: The currently build kernel is part of an heterogeneous platform
+%config end
